{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 32,
  "lineage": "eb359aff-8520-0a79-591a-5f12137ddab3",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:route-table/rtb-04cc04f6eb82aa752",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-05e22597df46c8416",
                "route_table_id": "rtb-04cc04f6eb82aa752",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-04cc04f6eb82aa752",
            "owner_id": "358294946186",
            "region": "us-east-1",
            "route_table_id": "rtb-04cc04f6eb82aa752",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a4f3f07aaf47021",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec359f70f0aba1c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:vpc/vpc-0ec359f70f0aba1c3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02c775a8c686b6348",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0d62f499102acc0cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec359f70f0aba1c3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04cc04f6eb82aa752",
            "owner_id": "358294946186",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011116fcbcca4b1d4",
            "arn": "arn:aws:ec2:us-east-1:358294946186:elastic-ip/eipalloc-011116fcbcca4b1d4",
            "domain": "vpc",
            "id": "eipalloc-011116fcbcca4b1d4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-233-198-172.compute-1.amazonaws.com",
            "public_ip": "34.233.198.172",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-nat",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-nat",
              "Project": "roboshop",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:internet-gateway/igw-0e4bc7c81c6fb852d",
            "id": "igw-0e4bc7c81c6fb852d",
            "owner_id": "358294946186",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011116fcbcca4b1d4",
            "association_id": "eipassoc-035d36b7d888a9ae8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06ce5757437c7512c",
            "network_interface_id": "eni-0f2819ff0f4fb694a",
            "private_ip": "10.0.1.162",
            "public_ip": "34.233.198.172",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c2f5bbd7a79c4dc3",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02c1f681b2286c2ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06ce5757437c7512c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02c1f681b2286c2ef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-02c1f681b2286c2ef"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02c1f681b2286c2ef440959817",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02c1f681b2286c2ef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0120bafb1f6651376"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-02c1f681b2286c2ef"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04cc04f6eb82aa752179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-04cc04f6eb82aa752",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0120bafb1f6651376"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-04cc04f6eb82aa752"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_route_table.main",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d4d32daeb31b594f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06ce5757437c7512c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0d4d32daeb31b594f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0d4d32daeb31b594f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d4d32daeb31b594f440959817",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0d4d32daeb31b594f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0120bafb1f6651376"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0d4d32daeb31b594f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e4bc7c81c6fb852d",
            "id": "r-rtb-0371af37f3eefc9e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0371af37f3eefc9e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0371af37f3eefc9e2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0371af37f3eefc9e2440959817",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0371af37f3eefc9e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0120bafb1f6651376"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0371af37f3eefc9e2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:route-table/rtb-02c1f681b2286c2ef",
            "id": "rtb-02c1f681b2286c2ef",
            "owner_id": "358294946186",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "id": "rtb-02c1f681b2286c2ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:route-table/rtb-0d4d32daeb31b594f",
            "id": "rtb-0d4d32daeb31b594f",
            "owner_id": "358294946186",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "id": "rtb-0d4d32daeb31b594f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:route-table/rtb-0371af37f3eefc9e2",
            "id": "rtb-0371af37f3eefc9e2",
            "owner_id": "358294946186",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "id": "rtb-0371af37f3eefc9e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1ea1680e48168ba",
            "region": "us-east-1",
            "route_table_id": "rtb-02c1f681b2286c2ef",
            "subnet_id": "subnet-03ff93abae18607e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eecdd4c04c782a0f",
            "region": "us-east-1",
            "route_table_id": "rtb-02c1f681b2286c2ef",
            "subnet_id": "subnet-040c87c3d6a96feaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b0f35cca8bfcd2b",
            "region": "us-east-1",
            "route_table_id": "rtb-0d4d32daeb31b594f",
            "subnet_id": "subnet-0e72fec9669c891c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06055f0cfea36b024",
            "region": "us-east-1",
            "route_table_id": "rtb-0d4d32daeb31b594f",
            "subnet_id": "subnet-013e7b74f837eeef3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b43c71d29e8b5d",
            "region": "us-east-1",
            "route_table_id": "rtb-0371af37f3eefc9e2",
            "subnet_id": "subnet-0c2f5bbd7a79c4dc3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061e9badf20ba1eb0",
            "region": "us-east-1",
            "route_table_id": "rtb-0371af37f3eefc9e2",
            "subnet_id": "subnet-0e9a6a52e3b1671d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:subnet/subnet-03ff93abae18607e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ff93abae18607e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "358294946186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "id": "subnet-03ff93abae18607e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:subnet/subnet-040c87c3d6a96feaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040c87c3d6a96feaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "358294946186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "id": "subnet-040c87c3d6a96feaf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:subnet/subnet-0e72fec9669c891c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e72fec9669c891c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "358294946186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "id": "subnet-0e72fec9669c891c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:subnet/subnet-013e7b74f837eeef3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013e7b74f837eeef3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "358294946186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "id": "subnet-013e7b74f837eeef3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:subnet/subnet-0c2f5bbd7a79c4dc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2f5bbd7a79c4dc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "358294946186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "id": "subnet-0c2f5bbd7a79c4dc3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:subnet/subnet-0e9a6a52e3b1671d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9a6a52e3b1671d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "358294946186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "id": "subnet-0e9a6a52e3b1671d5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358294946186:vpc/vpc-0a1cc2eb65b42628d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5a47cb65c551067",
            "default_route_table_id": "rtb-0652027cf09759fcd",
            "default_security_group_id": "sg-0838a9ab0ee3dbf7d",
            "dhcp_options_id": "dopt-0d62f499102acc0cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1cc2eb65b42628d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0652027cf09759fcd",
            "owner_id": "358294946186",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "358294946186",
            "id": "vpc-0a1cc2eb65b42628d",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-0120bafb1f6651376",
            "peer_owner_id": "358294946186",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0ec359f70f0aba1c3",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-default",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-default",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a1cc2eb65b42628d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}